# semantic-memory-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  lhm.plugin.json
docs/: release-v0.3.0.md  remaining-audit-work-plan.md  x-thread-v0.3.0.txt
docs/codex-runs/: ARCHIVAL_POLICY.md  CODEX_RUN_INDEX.md  CURRENT_RUN.md
hooks/: sm-autocapture.py  sm-capture-nudge.py  sm-dedup-guard.py  sm-primer.py  sm-recall.py  sm-tool-receipts.py  sm_health_check.py  sm_http_client.py
hooks/tests/: test_sm_http_client_admin.py  test_sm_recall_quality.py
integrations/: README.md
integrations/claude-plugin/: .mcp.json  README.md
integrations/claude-plugin/.claude-plugin/: plugin.json
integrations/claude-plugin/commands/: remember.md  semantic-memory-status.md
integrations/claude-plugin/skills/semantic-memory/: SKILL.md
integrations/codex/: README.md  config.example.toml
integrations/codex/.agents/skills/semantic-memory/: SKILL.md
integrations/hermes/: README.md  __init__.py  plugin.yaml  schemas.py  tools.py
integrations/tests/: validate_integrations.py
npm-wrapper/: package.json  recursiveintell-semantic-memory-mcp-1.1.0.tgz
scripts/: semantic-memory-mcp-relay.py  test_semantic_memory_mcp_relay.py
src/: bridge.rs  http_server.rs  http_server_stable.rs  lib.rs  main.rs  profile.rs  server.rs  server_stable.rs  skills.rs  tools.rs  tools_stable.rs
tests/: claim_completion.rs  integration.rs  orchestration.rs
