[package]
name = "semantic-memory-mcp"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Josh Stevenson <j.stevenson.cs@gmail.com>"]
readme = "README.md"
repository = "https://github.com/RecursiveIntell/semantic-memory-mcp"
homepage = "https://github.com/RecursiveIntell/semantic-memory-mcp"
documentation = "https://docs.rs/semantic-memory-mcp"
description = "MCP server wrapping semantic-memory — local-first knowledge management with evidence-scored retrieval, contradiction detection, and adaptive routing"
keywords = ["mcp", "semantic-memory", "rag", "knowledge-management", "vector-search"]
categories = ["database", "text-processing", "development-tools"]

[workspace]

[lib]
name = "semantic_memory_mcp"
path = "src/lib.rs"

[[bin]]
name = "semantic-memory-mcp"
path = "src/main.rs"

[features]
# SM-AUD-001: The MCP server references routing, integration, decoder, discord,
# provenance, factor_graph, topology, and community modules unconditionally in
# server.rs. These are all behind `full` features in semantic-memory. Making
# `full` the default ensures the advertised 18-tool surface compiles and works
# out of the box. The `search` profile composes every capability referenced by
# the currently unified tool router; it is a supported build profile, not a
# minimal tool surface.
default = ["full"]
# Core: usearch 2.25 backend (the default and recommended backend for
# semantic-memory — won the benchmark vs hnsw_rs by 2-78x on every metric
# that matters for a desktop RAG app, +4pp better recall@10 at D=768).
# No brute-force — usearch is the production backend.
# Includes candle-embedder so the default build needs no Ollama.
search = [
    "semantic-memory/usearch-backend",
    "semantic-memory/candle-embedder",
    "semantic-memory/provenance",
    "semantic-memory/temporal",
    "semantic-memory/multiscale",
    "semantic-memory/discord",
    "semantic-memory/decoder",
    "semantic-memory/subtraction",
    "semantic-memory/compression-governor",
    "semantic-memory/routing",
    "semantic-memory/integration",
    "semantic-memory/admin-ops",
    "semantic-memory/late-interaction",
    "semantic-memory/turbo-quant-codec",
    "semantic-memory/rl-routing",
    "candle-embedder",
    "claim-integration",
    "llm-parser",
    "orchestration",
]
# Local feature that forwards to semantic-memory's candle-embedder.
# Used for cfg gates in bridge.rs.
candle-embedder = ["semantic-memory/candle-embedder"]
# Full is currently an alias for the honestly composed search/tool-router profile.
full = ["search"]

# Claim-ledger integration: sm_create_claim, sm_add_evidence, sm_judge_support,
# sm_verify_claim, sm_proof_debt_status, sm_record_contradiction, etc.
claim-integration = ["dep:claim-ledger"]
# llm-output-parser: robust JSON parsing for agent-submitted and LLM output
llm-parser = ["dep:llm-output-parser"]
# knowledge-runtime: intent classification, multi-leg route planning,
# provenance-aware merge, scope-aware entity resolution, projection tracking.
# Upgrades /search-routed and adds sm_classify_query, sm_plan_query,
# sm_query_orchestrated, sm_query_temporal, sm_entity_lookup, sm_projection_health.
orchestration = [
    "dep:knowledge-runtime",
    "semantic-memory/provenance",
    "semantic-memory/temporal",
]
# HNSW backend (optional alternative to usearch). Enables compact-hnsw endpoint.
hnsw = ["semantic-memory/hnsw"]

[dependencies]
semantic-memory = { version = "0.5.8", path = "../semantic-memory", default-features = false }
stack-ids = { version = "0.1.1", path = "../stack-ids" }
claim-ledger = { version = "0.2.0", path = "../claim-ledger", optional = true }
llm-output-parser = { version = "0.2.0", path = "../llm-output-parser", optional = true }
knowledge-runtime = { version = "0.1.0", path = "../knowledge-runtime", optional = true }
boundary-compiler = { version = "0.1.0", path = "../boundary-compiler" }
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
schemars = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
semantic-memory = { path = "../semantic-memory", default-features = false, features = ["testing"] }
